box-sizing:border-box

--- a/mixin/index.less
+++ b/mixin/index.less
@@ -4,6 +4,7 @@
 //border
 @import "./border/border-1px.less";
 @import "./border/border-radius.less";
+@import "./border/border-box.less";
 
 //清除浮动
 @import "./clearfix/clearfix.less";
